# Courses

./: README.md
CS50 - Introduction to Computer Science/: General_instructions.md  discount  meow  meow.c
CS50 - Introduction to Computer Science/Lecture_1/: hello  hello.c
CS50 - Introduction to Computer Science/Problem_Set_2/: readabillity.c
Just_Practice/1.0/: movimento_bdays
Just_Practice/Python/: b_days.py
PCAP_Programming_Essentials_in_Python/: notes.md  practice.ipynb
PCAP_Python_Essencials_2/: anagrams.py  digit_of_life.py  my_own_split.py  palindrome.py
PCAP_Python_Essencials_2/Module_2/: cypher.py  find_a_word.py  reading_ints_safely.py  sudoko_validation.py
PCAP_Python_Essencials_2/Module_3_OOP/: base_exception_subclasses.py  clock_OOP.py  days_of_the_week.py
PCAP_Python_Essencials_2/Module_4_Misc/: char_frequency_histogram.py  string_generator.py
Regex_Course_Python/: main.ipynb  pyproject.toml  teste.ipynb
SQL_DB_Practice/: all_db.sql  ig_clone_db.sql  script_cb.sql  script_practice.sql
Udacity_AI_programming_with_Python/: General_Practice.ipynb
Udacity_AI_programming_with_Python/About_Conda/: Useful_commands.txt
Udacity_AI_programming_with_Python/First_Classes/: message.py
Udacity_AI_programming_with_Python/Matplotlib_Seaborn/: Bar_Chart_Practice.ipynb  Histogram_Practice.ipynb  solutions_univ.py
Udacity_AI_programming_with_Python/Numpy/: Acessing_Deleting_and_Inserting Elements into ndarryas.ipynb  Creating_and_Saving_Numpy_ndarrays.ipynb  Slicing_ndarrays.ipynb  (+1 more)
Udacity_Git_Course/: Useful_Commands
(+40 files in other folders)
