[tool.poetry]
name = "regex_course_python"
version = "0.1.0"
description = "regex_course"
authors = ["Pablo <pablomassirer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
